[gd_scene load_steps=12 format=3 uid="uid://cvgevlwsmtaoa"]

[ext_resource type="Script" path="res://Scenes/UI/Main Menu/main_menu.gd" id="1_yfx5c"]
[ext_resource type="Texture2D" uid="uid://d2vprbcrsolf2" path="res://Scenes/UI/image_resized.png" id="2_82wyr"]
[ext_resource type="Script" path="res://Scenes/UI/Main Menu/start.gd" id="2_hm0du"]
[ext_resource type="Script" path="res://Scenes/UI/Main Menu/tutorial.gd" id="4_ob4sk"]
[ext_resource type="Script" path="res://Scenes/UI/Main Menu/quit.gd" id="4_wcvsk"]
[ext_resource type="PackedScene" uid="uid://dr7qlqu1llxvy" path="res://Scenes/UI/Main Menu/settings.tscn" id="6_hcm67"]
[ext_resource type="Texture2D" uid="uid://cpvkqfi0sct75" path="res://Assets/cooltext473694033464554.png" id="7_apmm2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dlf2e"]
texture = ExtResource("2_82wyr")
modulate_color = Color(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="Theme" id="Theme_3ryll"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_78vtk"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_ay84o"]
default_font_size = 30

[node name="Main Menu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.136
offset_bottom = 0.871948
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfx5c")
metadata/_edit_horizontal_guides_ = [738.0]

[node name="BackGround" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_dlf2e")

[node name="mainmenuvbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 437.0
offset_top = -379.0
offset_right = 746.0
offset_bottom = -150.0
grow_vertical = 0

[node name="Start" type="Button" parent="mainmenuvbox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme = SubResource("Theme_3ryll")
text = "𝙋𝙇𝘼𝙔"
script = ExtResource("2_hm0du")

[node name="Tutorial" type="Button" parent="mainmenuvbox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme = SubResource("Theme_3ryll")
text = "𝙏𝙐𝙏𝙊𝙍𝙄𝘼𝙇
"
script = ExtResource("4_ob4sk")

[node name="Settings" type="Button" parent="mainmenuvbox"]
layout_mode = 2
theme = SubResource("Theme_78vtk")
text = "𝙊𝙋𝙏𝙄𝙊𝙉𝙎"

[node name="Quit" type="Button" parent="mainmenuvbox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
theme = SubResource("Theme_ay84o")
text = "𝙌𝙐𝙄𝙏
"
script = ExtResource("4_wcvsk")

[node name="settings" parent="." instance=ExtResource("6_hcm67")]
visible = false
layout_mode = 1
offset_bottom = -90.0

[node name="GameName" type="Sprite2D" parent="."]
position = Vector2(593, 194.5)
scale = Vector2(0.697639, 1.11702)
texture = ExtResource("7_apmm2")

[connection signal="pressed" from="mainmenuvbox/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="mainmenuvbox/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="mainmenuvbox/Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="mainmenuvbox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainmenuvbox/Quit" to="." method="_on_quit_pressed"]
